--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Liên Hệ - Hoa Tươi Quang Lập</title>
+    <title>Thông Tin - Hoa Tươi Quang Lập</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Shop Hoa Tươi Quận 7">
@@ -49,22 +49,49 @@
 
         <!-- Home -->
 
-        <!-- Contact Form -->
 
-        <div class="contact">
+        <!-- Contact Text -->
+
+        <div class="contact_text">
             <div class="container">
                 <div class="row">
-                    <div class="col">
-                        <div class="review_form_container">
-                            <p> Xin quý khách hàng thứ lỗi, hiện nay shop chúng tôi chỉ chấp
-                                nhận thanh toán bằng tiền mặt. Mong quý khách hàng thông cảm.</p>
+
+                    <!-- Contact Info -->
+                    <div class="col-lg-5">
+
+                        <div class="contact_info">
+                            <div class="contact_title">Thông Tin</div>
+                            <div class="contact_info_content">
+                                <ul>
+                                    <li>
+                                        <i class="fa fa-address-book-o" aria-hidden="true"></i>
+                                        <div class="contact_info_text">Address</div>
+                                    </li>
+                                    <li>
+                                        <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                                        <div class="contact_info_text">Email</div>
+                                    </li>
+                                    <li>
+                                        <i class="fa fa-phone" aria-hidden="true"></i>
+                                        <div class="contact_info_text">SDT</div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- MAP -->
+                    <div class="col-lg-7">
+
+                        <div id="map" style="width:500px;height:500px;">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62719.35685987287!2d106.6933228005305!3d10.737581490988486!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752560b050b093%3A0x6dcb89c51055ccc9!2zUXXhuq1uIDcsIEjhu5MgQ2jDrSBNaW5o!5e0!3m2!1svi!2s!4v1577901716636!5m2!1svi!2s"
+                                width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
-
 
         <!-- Footer -->
 
@@ -78,8 +105,9 @@
                                 <p>
                                     <div class="myframegmap">
                                         <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62719.35685987287!2d106.6933228005305!3d10.737581490988486!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752560b050b093%3A0x6dcb89c51055ccc9!2zUXXhuq1uIDcsIEjhu5MgQ2jDrSBNaW5o!5e0!3m2!1svi!2s!4v1577901716636!5m2!1svi!2s"
-                                width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62719.35685987287!2d106.6933228005305!3d10.737581490988486!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752560b050b093%3A0x6dcb89c51055ccc9!2zUXXhuq1uIDcsIEjhu5MgQ2jDrSBNaW5o!5e0!3m2!1svi!2s!4v1577901716636!5m2!1svi!2s"
+                                            width="600" height="450" frameborder="0" style="border:0;"
+                                            allowfullscreen=""></iframe>
                                     </div>
                                 </p><br>
                             </div>
