--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Contact</title>
+<title>Liên Hệ - Hoa Tươi Quang Lập</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="description" content="Wish shop project">
+<meta name="description" content="Shop Hoa Tươi Quận 7">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="styles/bootstrap4/bootstrap.min.css">
 <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -16,116 +16,36 @@
 <div class="super_container">
 	
 	<!-- Header -->
+	<div style="background-color: #2d2a25;">
+		<img src="images/images/background-banner.png" class="img-fluid" alt="Responsive image">
+	</div>
+	<nav class="navbar navbar-expand-lg" style="background-color: #fd9796;">
+		<a class="navbar-brand" href="index.html" style="font-size: 23px;">Trang Chủ</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"><i class="fa fa-bars" aria-hidden="true"></i></span>
+		</button>
 
-	<header class="header">
-		<div class="header_inner d-flex flex-row align-items-center justify-content-start">
-			<div class="logo"><a href="#">Wish</a></div>
-			<nav class="main_nav">
-				<ul>
-					<li><a href="index.html">home</a></li>
-					<li><a href="categories.html">clothes</a></li>
-					<li><a href="categories.html">accessories</a></li>
-					<li><a href="categories.html">lingerie</a></li>
-					<li><a href="contact.html">contact</a></li>
-				</ul>
-			</nav>
-			<div class="header_content ml-auto">
-				<div class="search header_search">
-					<form action="#">
-						<input type="search" class="search_input" required="required">
-						<button type="submit" id="search_button" class="search_button"><img src="images/magnifying-glass.svg" alt=""></button>
-					</form>
-				</div>
-				<div class="shopping">
-					<!-- Cart -->
-					<a href="#">
-						<div class="cart">
-							<img src="images/shopping-bag.svg" alt="">
-							<div class="cart_num_container">
-								<div class="cart_num_inner">
-									<div class="cart_num">1</div>
-								</div>
-							</div>
-						</div>
-					</a>
-					<!-- Star -->
-					<a href="#">
-						<div class="star">
-							<img src="images/star.svg" alt="">
-							<div class="star_num_container">
-								<div class="star_num_inner">
-									<div class="star_num">0</div>
-								</div>
-							</div>
-						</div>
-					</a>
-					<!-- Avatar -->
-					<a href="#">
-						<div class="avatar">
-							<img src="images/avatar.svg" alt="">
-						</div>
-					</a>
-				</div>
-			</div>
-
-			<div class="burger_container d-flex flex-column align-items-center justify-content-around menu_mm"><div></div><div></div><div></div></div>
-		</div>
-	</header>
-
-	<!-- Menu -->
-
-	<div class="menu d-flex flex-column align-items-end justify-content-start text-right menu_mm trans_400">
-		<div class="menu_close_container"><div class="menu_close"><div></div><div></div></div></div>
-		<div class="logo menu_mm"><a href="#">Wish</a></div>
-		<div class="search">
-			<form action="#">
-				<input type="search" class="search_input menu_mm" required="required">
-				<button type="submit" id="search_button" class="search_button menu_mm"><img class="menu_mm" src="images/magnifying-glass.svg" alt=""></button>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item active">
+					<a class="nav-link" href="about.html">Thông Tin <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="cart.html">Thanh Toán</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="contact.html">Liên Hệ</a>
+				</li>
+			</ul>
+			<form class="form-inline my-2 my-lg-0">
+				<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Tìm Kiếm</button>
 			</form>
 		</div>
-		<nav class="menu_nav">
-			<ul class="menu_mm">
-				<li class="menu_mm"><a href="index.html">home</a></li>
-				<li class="menu_mm"><a href="#">clothes</a></li>
-				<li class="menu_mm"><a href="#">accessories</a></li>
-				<li class="menu_mm"><a href="#">lingerie</a></li>
-				<li class="menu_mm"><a href="#">contact</a></li>
-			</ul>
-		</nav>
-	</div>
+	</nav>
 
 	<!-- Home -->
-
-	<div class="home">
-		<div class="home_background parallax-window" data-parallax="scroll" data-image-src="images/contact.jpg" data-speed="0.8"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col">
-					<div class="home_container">
-						<div class="home_content">
-							<div class="home_title">Contact</div>
-							<div class="breadcrumbs">
-								<ul>
-									<li><a href="index.html">Home</a></li>
-									<li>Contact</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<!-- Google Map -->
-		
-	<div class="map">
-		<div id="google_map" class="google_map">
-			<div class="map_container">
-				<div id="map"></div>
-			</div>
-		</div>
-	</div>
 	
 	<!-- Contact Form -->
 
@@ -134,16 +54,16 @@
 			<div class="row">
 				<div class="col">
 					<div class="review_form_container">
-						<div class="review_form_title">get in touch</div>
+						<div class="review_form_title">Để lại thông tin để được liên hệ sớm nhất</div>
 						<div class="review_form_content">
 							<form action="#" id="review_form" class="review_form">
 								<div class="d-flex flex-md-row flex-column align-items-start justify-content-between">
-									<input type="text" class="review_form_input" placeholder="Name" required="required">
+									<input type="text" class="review_form_input" placeholder="Tên" required="required">
 									<input type="email" class="review_form_input" placeholder="E-mail" required="required">
-									<input type="text" class="review_form_input" placeholder="Subject">
+									<input type="text" class="review_form_input" placeholder="Chủ đề">
 								</div>
-								<textarea class="review_form_text" name="review_form_text" placeholder="Message"></textarea>
-								<button type="submit" class="review_form_button">send message</button>
+								<textarea class="review_form_text" name="review_form_text" placeholder="Tin nhắn"></textarea>
+								<button type="submit" class="review_form_button">Gửi Tin</button>
 							</form>
 						</div>
 					</div>
@@ -152,145 +72,59 @@
 		</div>
 	</div>
 
-	<!-- Contact Text -->
-
-	<div class="contact_text">
-		<div class="container">
-			<div class="row">
-
-				<!-- Contact Info -->
-				<div class="col-lg-5">
-
-					<div class="contact_info">
-						<div class="contact_title">contact info</div>
-						<div class="contact_info_content">
-							<ul>
-								<li>
-									<div class="contact_info_icon"><img src="images/contact_info_1.png" alt=""></div>
-									<div class="contact_info_text">Rosia Road, no67, Gibraltar UK</div>
-								</li>
-								<li>
-									<div class="contact_info_icon"><img src="images/contact_info_2.png" alt=""></div>
-									<div class="contact_info_text">office@yourbusiness.com</div>
-								</li>
-								<li>
-									<div class="contact_info_icon"><img src="images/contact_info_3.png" alt=""></div>
-									<div class="contact_info_text">+45 7703 29293 34</div>
-								</li>
-							</ul>
-						</div>
-						<div class="contact_info_social">
-							<ul>
-								<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-reddit-alien" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-
-				<!-- FAQ -->
-				<div class="col-lg-7">
-					<div class="faq">
-						<div class="contact_title">faq</div>
-						<div class="faq_content">
-
-							<!-- Accordions -->
-							<div class="accordions">
-
-								<div class="accordion_container">
-									<div class="accordion d-flex flex-row align-items-center"><div>Lorem ipsum dolor sit amet, consectetur?</div></div>
-									<div class="accordion_panel">
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis quam ipsum. Pellentesque consequat tellus non tortor tempus, id egestas elit iaculis. Proin eu dui porta, pretium metus vitae, pharetra odio. Sed ac mi commodo, pellentesque erat eget, accumsan justo.</p>
-									</div>
-								</div>
-
-								<div class="accordion_container">
-									<div class="accordion d-flex flex-row align-items-center"><div>Ipsum dolor sit amet, consectetur?</div></div>
-									<div class="accordion_panel">
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis quam ipsum. Pellentesque consequat tellus non tortor tempus, id egestas elit iaculis. Proin eu dui porta, pretium metus vitae, pharetra odio. Sed ac mi commodo, pellentesque erat eget, accumsan justo.</p>
-									</div>
-								</div>
-
-								<div class="accordion_container">
-									<div class="accordion d-flex flex-row align-items-center active"><div>Proin eu dui porta, pretium metus vitae?</div></div>
-									<div class="accordion_panel">
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis quam ipsum. Pellentesque consequat tellus non tortor tempus, id egestas elit iaculis. Proin eu dui porta, pretium metus vitae, pharetra odio. Sed ac mi commodo, pellentesque erat eget, accumsan justo.</p>
-									</div>
-								</div>
-
-							</div>
-
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<!-- Newsletter -->
-
-	<div class="newsletter">
-		<div class="newsletter_content">
-			<div class="newsletter_image" style="background-image:url(images/newsletter.jpg)"></div>
-			<div class="container">
-				<div class="row newsletter_row">
-					<div class="col">
-						<div class="section_title_container text-center">
-							<div class="section_subtitle">only the best</div>
-							<div class="section_title">subscribe for a 20% discount</div>
-						</div>
-					</div>
-				</div>
-				<div class="row newsletter_container">
-					<div class="col-lg-10 offset-lg-1">
-						<div class="newsletter_form_container">
-							<form action="#">
-								<input type="email" class="newsletter_input" required="required" placeholder="E-mail here">
-								<button type="submit" class="newsletter_button">subscribe</button>
-							</form>
-						</div>
-						<div class="newsletter_text">Integer ut imperdiet erat. Quisque ultricies lectus tellus, eu tristique magna pharetra nec. Fusce vel lorem libero. Integer ex mi, facilisis sed nisi ut, vestib ulum ultrices nulla. Aliquam egestas tempor leo.</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+	
 
 	<!-- Footer -->
 
-	<footer class="footer">
-		<div class="container">
-			<div class="row">
-				<div class="col text-center">
-					<div class="footer_logo"><a href="#">Wish</a></div>
-					<nav class="footer_nav">
-						<ul>
-							<li><a href="index.html">home</a></li>
-							<li><a href="categories.html">clothes</a></li>
-							<li><a href="categories.html">accessories</a></li>
-							<li><a href="categories.html">lingerie</a></li>
-							<li><a href="contact.html">contact</a></li>
-						</ul>
-					</nav>
-					<div class="footer_social">
-						<ul>
-							<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-							<li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-							<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-							<li><a href="#"><i class="fa fa-reddit-alien" aria-hidden="true"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-						</ul>
+	<div class="footer">
+		<div class="footer1">
+			<div class="container-fluid">
+				<div class="container ">
+					<div class="row">
+						<div class="col-sm-4">
+							<h2>About Us</h2>
+							<p>
+								<div class="myframegmap">
+									<iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62719.35685987287!2d106.6933228005305!3d10.737581490988486!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752560b050b093%3A0x6dcb89c51055ccc9!2zUXXhuq1uIDcsIEjhu5MgQ2jDrSBNaW5o!5e0!3m2!1svi!2s!4v1577901716636!5m2!1svi!2s"
+                                width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+								</div>
+							</p><br>
+						</div>
+						<div class="col-sm-4">
+							<h2>Home</h2>
+							<p>
+								<a href="index.html"><i class="fa fa-home" aria-hidden="true"></i>&nbsp; Trang
+									Chủ</a>
+								<br>
+								<a href="about.html"><i class="fa fa-user-o" aria-hidden="true"></i>&nbsp; Thông
+									Tin</a>
+								<br>
+								<a href="cart.html"><i class="fa fa-credit-card" aria-hidden="true"></i>&nbsp; Thanh
+									Toán</a>
+								<br>
+								<a href="contact.html"><i class="fa fa-address-book-o" aria-hidden="true"></i>&nbsp;
+									Liên
+									Hệ</a>
+								<br>
+							</p>
+						</div>
+						<div class="col-sm-4 ">
+							<h2>Contact Us</h2>
+							<p>
+								<i class="fa fa-phone"></i>    <a href="tel:0123456789"> +0123456789</a><br>
+								<i class="fa fa-envelope"></i>    <a href="mailto:abc@abc.com">
+									abc@abc.com</a><br>
+								<i class="fa fa-map-marker"></i>     A-101 Delhi, India
+							</p>
+							<br>
+						</div>
 					</div>
-					<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
+					<div class="clear30"></div>
 				</div>
 			</div>
 		</div>
-	</footer>
+	</div>
 </div>
 
 <script src="js/jquery-3.2.1.min.js"></script>
