--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 		<!-- Header -->
 		<div style="background-color: #2d2a25;">
-			<img src="images/background-banner.png" class="img-fluid" alt="Responsive image">
+			<img src="images/images/background-banner.png" class="img-fluid" alt="Responsive image">
 		</div>
 		<nav class="navbar navbar-expand-lg" style="background-color: #fd9796;">
 			<a class="navbar-brand" href="index.html" style="font-size: 23px;">Trang Chủ</a>
@@ -183,7 +183,7 @@
 							</div>
 							<div class="product_content clearfix">
 								<div class="product_info">
-									<div class="product_name"><a href="product.html">Giỏ Hoa Hướng Dương</a></div>
+									<div class="product_name"><a href="hoakhaitruong.html"      >Giỏ Hoa Hướng Dương</a></div>
 									<div class="product_price">350.000 vnđ</div>
 								</div>
 							</div>
