--- a/hoakhaitruong.html
+++ b/hoakhaitruong.html
@@ -38,7 +38,7 @@
                         <a class="nav-link" href="about.html">Thông Tin <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="cart.html">Thanh Toán</a>
+                        <a class="nav-link" href="news.html">Tin Tức</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Liên Hệ</a>
@@ -212,8 +212,7 @@
                                 <a href="about.html"><i class="fa fa-user-o" aria-hidden="true"></i>&nbsp; Thông
                                     Tin</a>
                                 <br>
-                                <a href="cart.html"><i class="fa fa-credit-card" aria-hidden="true"></i>&nbsp; Thanh
-                                    Toán</a>
+                                <a href="news.html"><i class="fa fa-credit-card" aria-hidden="true"></i>&nbsp; Tin Tức</a>
                                 <br>
                                 <a href="contact.html"><i class="fa fa-address-book-o" aria-hidden="true"></i>&nbsp;
                                     Liên
