--- a/news.html
+++ b/news.html
@@ -2,15 +2,14 @@
 <html lang="en">
 
 <head>
-    <title>Thông Tin - Hoa Tươi Quang Lập</title>
+    <title>Tin Tức - Hoa Tươi Quang Lập</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Shop Hoa Tươi Quận 7">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="styles/bootstrap4/bootstrap.min.css">
     <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="styles/contact.css">
-    <link rel="stylesheet" type="text/css" href="styles/contact_responsive.css">
+    <link rel="stylesheet" href="styles/main_styles.css">
 </head>
 
 <body>
@@ -49,49 +48,125 @@
 
         <!-- Home -->
 
+        <div class="container cta-100 ">
+			<div class="container">
+				<div class="row">
+					<div class="col">
+						<div class="section_title_container text-center">
+							<div class="section_subtitle">Tin Tức</div>
+							<div class="section_title">Hot Nhất</div>
+						</div>
+					</div>
+				</div> <br>
+				<div class="row blog">
+					<div class="col-md-12">
+						<!-- Carousel items -->
+						<div class="row">
+							<div class="col-md-4">
+								<div class="item-box-blog">
+									<div class="item-box-blog-image">
+										<!--Date-->
+										<div class="item-box-blog-date bg-blue-ui white"> <span
+												class="mon">01/12/2019</span> </div>
+										<!--Image-->
+										<figure> <img class="center-cropped" alt=""
+												src="images/images/anhlap.png">
+                                        </figure>
+                                        
+									</div>
+									<div class="item-box-blog-body">
+										<!--Heading-->
+										<div class="item-box-blog-heading">
+											<a href="#" tabindex="0">
+												<h5>News Title</h5>
+											</a>
+										</div>
+										<!--Text-->
+										<div class="item-box-blog-text">
+											<p>Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit
+												amet, consectetuer adipiscing. Lorem ipsum dolor sit amet,
+												adipiscing. Lorem ipsum dolor sit amet, adipiscing. Lorem
+												ipsum dolor sit amet, consectetuer adipiscing. Lorem ipsum
+												dolor.</p>
+										</div>
+										<div class="mt"> <a href="#" tabindex="0" class="btn bg-blue-ui white read">Xem
+												thêm</a> </div>
+										<!--Read More Button-->
+									</div>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="item-box-blog">
+									<div class="item-box-blog-image">
+										<!--Date-->
+										<div class="item-box-blog-date bg-blue-ui white"> <span
+												class="mon">01/12/2019</span> </div>
+										<!--Image-->
+										<figure> <img alt=""
+												src="https://cdn.pixabay.com/photo/2017/02/08/14/25/computer-2048983_960_720.jpg">
+										</figure>
+									</div>
+									<div class="item-box-blog-body">
+										<!--Heading-->
+										<div class="item-box-blog-heading">
+											<a href="#" tabindex="0">
+												<h5>News Title</h5>
+											</a>
+										</div>
+										<!--Text-->
+										<div class="item-box-blog-text">
+											<p>Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit
+												amet, consectetuer adipiscing. Lorem ipsum dolor sit amet,
+												adipiscing. Lorem ipsum dolor sit amet, adipiscing. Lorem
+												ipsum dolor sit amet, consectetuer adipiscing. Lorem ipsum
+												dolor.</p>
+										</div>
+										<div class="mt"> <a href="#" tabindex="0" class="btn bg-blue-ui white read">Xem
+												thêm</a> </div>
+										<!--Read More Button-->
+									</div>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="item-box-blog">
+									<div class="item-box-blog-image">
+										<!--Date-->
+										<div class="item-box-blog-date bg-blue-ui white"> <span
+												class="mon">01/12/2019</span> </div>
+										<!--Image-->
+										<figure> <img alt=""
+												src="https://cdn.pixabay.com/photo/2017/02/08/14/25/computer-2048983_960_720.jpg">
+										</figure>
+									</div>
+									<div class="item-box-blog-body">
+										<!--Heading-->
+										<div class="item-box-blog-heading">
+											<a href="#" tabindex="0">
+												<h5>News Title</h5>
+											</a>
+										</div>
+										<!--Text-->
+										<div class="item-box-blog-text">
+											<p>Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit
+												amet, consectetuer adipiscing. Lorem ipsum dolor sit amet,
+												adipiscing. Lorem ipsum dolor sit amet, adipiscing. Lorem
+												ipsum dolor sit amet, consectetuer adipiscing. Lorem ipsum
+												dolor.</p>
+										</div>
+										<div class="mt"> <a href="#" tabindex="0" class="btn bg-blue-ui white read">Xem
+												thêm</a> </div>
+										<!--Read More Button-->
+									</div>
+								</div>
+							</div>
+						</div>
+						<!--.row-->
+					</div>
+				</div>
+			</div>
+		</div>
 
-        <!-- Contact Text -->
 
-        <div class="contact_text">
-            <div class="container">
-                <div class="row">
-
-                    <!-- Contact Info -->
-                    <div class="col-lg-5">
-
-                        <div class="contact_info">
-                            <div class="contact_title">Thông Tin</div>
-                            <div class="contact_info_content">
-                                <ul>
-                                    <li>
-                                        <i class="fa fa-address-book-o" aria-hidden="true"></i>
-                                        <div class="contact_info_text">Address</div>
-                                    </li>
-                                    <li>
-                                        <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                                        <div class="contact_info_text">Email</div>
-                                    </li>
-                                    <li>
-                                        <i class="fa fa-phone" aria-hidden="true"></i>
-                                        <div class="contact_info_text">SDT</div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- MAP -->
-                    <div class="col-lg-7">
-
-                        <div id="map" style="width:500px;height:500px;">
-                            <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62719.35685987287!2d106.6933228005305!3d10.737581490988486!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752560b050b093%3A0x6dcb89c51055ccc9!2zUXXhuq1uIDcsIEjhu5MgQ2jDrSBNaW5o!5e0!3m2!1svi!2s!4v1577901716636!5m2!1svi!2s"
-                                width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
 
         <!-- Footer -->
 
