--- a/index.html
+++ b/index.html
@@ -403,7 +403,51 @@
 												class="mon">01/12/2019</span> </div>
 										<!--Image-->
 										<figure> <img alt=""
-												src="https://cdn.pixabay.com/photo/2017/02/08/14/25/computer-2048983_960_720.jpg">
+												src="images/images/hoa.jpg">
+										</figure>
+									</div>
+									<div class="item-box-blog-body">
+										<!--Heading-->
+										<div class="item-box-blog-heading">
+											<a href="#" tabindex="0">
+												<h5>News Title</h5>
+											</a>
+										</div>
+										<!--Text-->
+										<div class="item-box-blog-text">
+											<p>Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit
+												amet, consectetuer adipiscing. Lorem ipsum dolor sit amet,
+												adipiscing. Lorem ipsum dolor sit amet, adipiscing. Lorem
+												ipsum dolor sit amet, consectetuer adipiscing. Lorem ipsum
+												dolor.Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit
+												amet, consectetuer adipiscing. Lorem ipsum dolor sit amet,
+												adipiscing. Lorem ipsum dolor sit amet, adipiscing. Lorem
+												ipsum dolor sit amet, consectetuer adipiscing. Lorem ipsum
+												dolor.Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit
+												amet, consectetuer adipiscing. Lorem ipsum dolor sit amet,
+												adipiscing. Lorem ipsum dolor sit amet, adipiscing. Lorem
+												ipsum dolor sit amet, consectetuer adipiscing. Lorem ipsum
+												dolor.Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit
+												amet, consectetuer adipiscing. Lorem ipsum dolor sit amet,
+												adipiscing. Lorem ipsum dolor sit amet, adipiscing. Lorem
+												ipsum dolor sit amet, consectetuer adipiscing. Lorem ipsum
+												dolor.</p>
+										</div>
+										<div class="mt"> <a href="#" tabindex="0" class="btn bg-blue-ui white read">Xem
+												thêm</a> </div>
+										<!--Read More Button-->
+									</div>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="item-box-blog">
+									<div class="item-box-blog-image">
+										<!--Date-->
+										<div class="item-box-blog-date bg-blue-ui white"> <span
+												class="mon">01/12/2019</span> </div>
+										<!--Image-->
+										<figure> <img alt=""
+												src="images/images/hoa.jpg">
 										</figure>
 									</div>
 									<div class="item-box-blog-body">
@@ -435,39 +479,7 @@
 												class="mon">01/12/2019</span> </div>
 										<!--Image-->
 										<figure> <img alt=""
-												src="https://cdn.pixabay.com/photo/2017/02/08/14/25/computer-2048983_960_720.jpg">
-										</figure>
-									</div>
-									<div class="item-box-blog-body">
-										<!--Heading-->
-										<div class="item-box-blog-heading">
-											<a href="#" tabindex="0">
-												<h5>News Title</h5>
-											</a>
-										</div>
-										<!--Text-->
-										<div class="item-box-blog-text">
-											<p>Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit
-												amet, consectetuer adipiscing. Lorem ipsum dolor sit amet,
-												adipiscing. Lorem ipsum dolor sit amet, adipiscing. Lorem
-												ipsum dolor sit amet, consectetuer adipiscing. Lorem ipsum
-												dolor.</p>
-										</div>
-										<div class="mt"> <a href="#" tabindex="0" class="btn bg-blue-ui white read">Xem
-												thêm</a> </div>
-										<!--Read More Button-->
-									</div>
-								</div>
-							</div>
-							<div class="col-md-4">
-								<div class="item-box-blog">
-									<div class="item-box-blog-image">
-										<!--Date-->
-										<div class="item-box-blog-date bg-blue-ui white"> <span
-												class="mon">01/12/2019</span> </div>
-										<!--Image-->
-										<figure> <img alt=""
-												src="https://cdn.pixabay.com/photo/2017/02/08/14/25/computer-2048983_960_720.jpg">
+												src="images/images/hoa.jpg">
 										</figure>
 									</div>
 									<div class="item-box-blog-body">
